--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
        <section id="header">
  <ul class="flex  justify-around items-center text-xl p-7  font-bold" id="list"> </ul>
        </section>
+       <div id="spinner" class="flex hidden w-full h-full relative top-[300px] items-center justify-center">
+        <div class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
    <section class="m-[50px]" id="post-container">
-      
+   
    </section>
       </main>
       <!-- modal section   -->
