added post counter

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
+      <section id="post-count" class="w-3/4  mt-5 bg-gray-200 text-gray-900 m-auto p-11 text-3xl text-center font-bold">
+             <p>Please Select a Catagory to see posts</p>
+      </section>
    <section class="m-[50px]" id="post-container">
    
    </section>
