added blog page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
           <!-- Right elements -->
           <div class="flex items-center relative text-lg text-red-400 hover:text-red-600 font-bold p-2 ">
-             <a href="updates.html">Updates</a>
+             <a href="index.html">Updates</a>
             </div>
             <div class="dropdown relative text-lg font-bold text-lime-400 hover:text-lime-600 p-2 mr-5">
              <a href="blog.html">Blogs</a>
@@ -83,7 +83,7 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <section id="post-count" class="w-3/4  mt-5 bg-gray-200 text-gray-900 m-auto p-11 text-3xl text-center font-bold">
+      <section id="post-count" class="w-3/4  mt-5 bg-red-100 text-lime-600 m-auto p-11 text-3xl text-center font-bold">
              <p>Please Select a Catagory to see posts</p>
       </section>
    <section class="m-[50px]" id="post-container">
