--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <nav
-        class="relative w-full flex flex-wrap items-center justify-between py-4 bg-gray-100 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg navbar navbar-expand-lg navbar-light"
+        class="relative w-full flex  flex-wrap items-center justify-between py-4 bg-gray-100 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg navbar navbar-expand-lg navbar-light"
       >
         <div
           class="container-fluid w-full flex flex-wrap items-center justify-between px-6"
@@ -76,14 +76,15 @@
     </header>
       <main>
        <section id="header">
- <ul class="flex  justify-around items-center text-xl p-7  font-bold" id="list"> </ul>
+ <ul class="flex flex-col md:flex-row  flex-wrap justify-around items-center text-xl p-7  font-bold" id="list">
+   </ul>
        </section>
        <div id="spinner" class="flex hidden w-full h-full relative top-[300px] items-center justify-center">
         <div class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full" role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <section id="post-count" class="w-3/4 mb-5 mt-5 bg-red-100 text-lime-600 m-auto p-11 text-3xl text-center font-bold">
+      <section id="post-count" class="w-3/4 mb-5 mt-5 bg-red-100 text-lime-600 m-auto p-4 md:p-8 lg:p-11 text-xl md:text-3xl text-center font-bold">
              <p>Please Select a Catagory to see posts</p>
       </section>
       <section>
@@ -128,7 +129,7 @@
               </button>
          </div>
        </section>
-   <section class="m-[50px]" id="post-container">
+   <section class=" sm:m-[50px] m-0  " id="post-container">
    
    </section>
       </main>
