--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
+<!-- page starting  -->
 <body style="font-family: 'Playfair Display', serif;">
+  <!-- navbar section starts here  -->
   <header>
     <nav
       class="relative w-full flex  flex-wrap items-center justify-between py-4 bg-gray-100 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg navbar navbar-expand-lg navbar-light">
@@ -46,19 +47,41 @@
       </div>
     </nav>
   </header>
+  <!-- navbar section end here  -->
+
+
+
+  <!-- catagory section starts here  -->
   <section id="header">
     <ul class="flex flex-col md:flex-row  flex-wrap justify-around items-center text-xl p-7  font-bold" id="list">
     </ul>
   </section>
+  <!-- catagory section ends here  -->
+
+
+
+  <!-- spinner section starts here  -->
   <div id="spinner" class="flex hidden w-full h-full relative top-[300px] items-center justify-center">
     <div class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full" role="status">
       <span class="visually-hidden">Loading...</span>
     </div>
   </div>
+  <!-- spiner section ends here  -->
+
+
+
+
+  <!-- post counter section starts here  -->
   <section id="post-count"
     class="w-3/4 mb-5 mt-5 bg-red-100 text-lime-600 m-auto p-4 md:p-8 lg:p-11 text-xl md:text-3xl text-center font-bold">
     <p>Please Select a Catagory to see posts</p>
   </section>
+  <!-- post counter section ends here  -->
+
+
+
+
+ <!-- sor button section starts here  -->
   <section>
     <div class="m-auto w-3/4">
       <button disabled class="
@@ -88,12 +111,28 @@
       </button>
     </div>
   </section>
+  <!-- sort button section ends here  -->
+
+
+
+
+
+
+
+  <!-- main content starts here  -->
   <main>
     <section class=" sm:m-[50px] m-auto" id="post-container">
 
     </section>
   </main>
-  <!-- modal section   -->
+  <!-- main content ends here  -->
+
+
+
+
+
+
+  <!-- modal section  starts here -->
   <div class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto"
     id="exampleModalCenteredScrollable" tabindex="-1" aria-labelledby="exampleModalCenteredScrollable" aria-modal="true"
     role="dialog">
@@ -123,8 +162,13 @@
       </div>
     </div>
   </div>
+  <!-- modal section ends here  -->
+
+
+
+
   <script src="index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
 </body>
-
+<!-- page ending  -->
 </html>
