--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stay Up To Date</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <!-- page starting  -->
+
 <body style="font-family: 'Playfair Display', serif;">
   <!-- navbar section starts here  -->
   <header>
     <nav
-      class="relative w-full flex  flex-wrap items-center justify-between py-4 bg-gray-100 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg navbar navbar-expand-lg navbar-light">
+      class="relative w-full flex  flex-wrap items-center justify-between py-4 bg-gray-900 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg navbar navbar-expand-lg ">
       <div class="container-fluid w-full flex flex-wrap items-center justify-between px-6">
         <button
           class="navbar-toggler text-gray-500 border-0 hover:shadow-none hover:no-underline py-2 px-2.5 bg-transparent focus:outline-none focus:ring-0 focus:shadow-none focus:no-underline"
@@ -33,14 +34,14 @@
           </svg>
         </button>
         <div class="collapse navbar-collapse flex-grow items-center text-2xl font-bold" id="navbarSupportedContent">
-          <span class="text-red-400">UP</span><span class="text-lime-400">TO</span><span
-            class="text-red-400">DATE</span>
+          <span class="text-teal-500">UP</span><span class="text-rose-500">TO</span><span
+            class="text-teal-500">DATE</span>
 
         </div>
-        <div class="flex items-center relative text-lg text-red-400 hover:text-red-600 font-bold p-2 ">
+        <div class="flex items-center relative text-lg text-rose-500 duration-300 hover:text-white font-bold p-2 ">
           <a href="index.html">Updates</a>
         </div>
-        <div class="dropdown relative text-lg font-bold text-lime-400 hover:text-lime-600 p-2 mr-5">
+        <div class="dropdown relative text-lg font-bold text-teal-400 duration-300 hover:text-white p-2 mr-5">
           <a href="blog.html">Blogs</a>
         </div>
       </div>
@@ -73,7 +74,7 @@
 
   <!-- post counter section starts here  -->
   <section id="post-count"
-    class="w-3/4 mb-5 mt-5 bg-red-100 text-lime-600 m-auto p-4 md:p-8 lg:p-11 text-xl md:text-3xl text-center font-bold">
+    class="w-3/4 mb-5 mt-5 bg-teal-100 text-rose-500 m-auto p-4 md:p-8 lg:p-11 text-xl md:text-3xl text-center font-bold">
     <p>Please Select a Catagory to see posts</p>
   </section>
   <!-- post counter section ends here  -->
@@ -81,16 +82,16 @@
 
 
 
- <!-- sor button section starts here  -->
+  <!-- sor button section starts here  -->
   <section>
     <div class="m-auto w-3/4">
       <button disabled class="
                
                 px-6
                 py-2.5
-                bg-lime-600
+                bg-teal-600
                 text-white
-                font-medium
+                font-semibold
                 text-md
                 leading-tight
                 uppercase
@@ -141,7 +142,7 @@
         class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white bg-clip-padding rounded-md outline-none text-current">
         <div
           class="modal-header flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md">
-          <h5 class="text-xl font-medium leading-normal text-gray-800" id="exampleModalCenteredScrollableLabel">
+          <h5 class="text-xl leading-normal text-gray-900 font-bold" id="exampleModalCenteredScrollableLabel">
 
           </h5>
           <button type="button"
@@ -154,7 +155,7 @@
         <div
           class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
           <button type="button"
-            class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg"
+            class="inline-block px-6 py-2.5 bg-rose-600 font-bold text-white text-xs leading-tight uppercase rounded shadow-md hover:bg-rose-700 hover:shadow-lg"
             data-bs-dismiss="modal">
             Close
           </button>
@@ -171,4 +172,5 @@
   <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
 </body>
 <!-- page ending  -->
+
 </html>
